# tenkan

./: .editorconfig  .gitignore  CMakeLists.txt  QmlModule.cmake
.github/workflows/: linux.yml  webassembly.yml  windows.yml
qml/: AboutDialog.qml  AppHeader.qml  AppLogo.qml  Main.qml  PackageList.qml  PackageStatusDialog.qml  SettingsDialog.qml
res/app/: tenkan.desktop
src/: CMakeLists.txt  config.cpp  config.hpp  devops.cpp  devops.hpp  main.cpp
src/api/: CMakeLists.txt  aikidoapi.cpp  aikidoapi.hpp  api.cpp  api.hpp  cosmosdbapi.cpp  cosmosdbapi.hpp  devopsapi.cpp  devopsapi.hpp  npmapi.cpp  npmapi.hpp  nugetapi.cpp  nugetapi.hpp
src/config/: aikido.hpp  cosmosdb.hpp  devops.hpp  project.hpp  repository.hpp
src/data/: aikidocoderepository.hpp  aikidopackage.hpp  nodejspackagemanager.hpp  npmpackageinfo.hpp  nugetpackageinfo.hpp  package.hpp  packageinfo.hpp  packagestatus.hpp  packagetype.hpp  pullrequest.hpp  team.hpp  verification.hpp
src/data/dotnet/: packagereference.hpp
src/data/nodejs/: package.hpp
src/model/: CMakeLists.txt  packagetablemodel.cpp  packagetablemodel.hpp  packagetableproxymodel.cpp  packagetableproxymodel.hpp
src/parser/: CMakeLists.txt  csprojparser.cpp  csprojparser.hpp  csvparser.cpp  csvparser.hpp  packagejsonparser.cpp  packagejsonparser.hpp
src/qml/: CMakeLists.txt  greeter.cpp  greeter.hpp  settings.cpp  settings.hpp  windowmanager.cpp  windowmanager.hpp
src/server/: CMakeLists.txt  apiserver.cpp  apiserver.hpp
src/simplecrypt/: CMakeLists.txt  simplecrypt.cpp  simplecrypt.h
